<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.example.irecycle.model.user" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4F9E4D"
        app:layoutDescription="@xml/fragment_achievement_xml_constraintlayout5_scene"
        tools:context=".ui.dash.AchievementFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_image"
                android:layout_width="121dp"
                android:layout_height="121dp"
                android:layout_marginTop="29dp"
                android:background="@color/white"
                android:src="@drawable/avtaar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{user.name}"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_image" />

            <TextView
                android:id="@+id/user_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{user.rank}"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView1"
                android:layout_width="155dp"
                android:layout_height="61dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F2FFF2"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_rank">

                <TextView
                    android:id="@+id/total_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:clipToOutline="true"
                    android:maxLines="1"
                    android:text="@{String.valueOf(user.score)}"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/order_rev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:clipToOutline="true"
                    android:maxLines="1"
                    android:text="@string/total_points"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/coin" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardView2"
                android:layout_width="155dp"
                android:layout_height="61dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="#F2FFF2"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/user_rank">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/streak"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:clipToOutline="true"
                        android:maxLines="1"
                        android:text="@string/_25"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToOutline="true"
                        android:maxLines="1"
                        android:text="@string/days"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/order_dis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:clipToOutline="true"
                    android:maxLines="1"
                    android:text="@string/streaks"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center|end"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/streak" />


            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/achievements"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="-20dp"
            app:cardCornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:gravity="top|center_horizontal"
                android:text="@string/leaderboard"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/leaderboard_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical"
                android:paddingBottom="70dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/leaderboard_item_list" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>